--- a/Lab4_Express/package.json
+++ b/Lab4_Express/package.json
@@ -21,9 +21,11 @@
     "homepage": "https://github.com/MarcinSkic/web-frameworks#readme",
     "dependencies": {
         "body-parser": "^1.20.2",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "express-validator": "^7.0.1"
     },
     "devDependencies": {
-        "nodemon": "^2.0.22"
+        "nodemon": "^2.0.22",
+        "validator": "^13.9.0"
     }
 }
